--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "interfaces/*": ["src/interfaces/*"],
+      "interfaces": ["src/interfaces"],
+      "components/*": ["src/components/*"],
+      "components": ["src/components"],
+      "views/*": ["src/views/*"],
+      "views": ["src/views"],
+      "pages": ["pages"],
+      "pages/*": ["pages/*"],
+      "utils/*": ["src/utils/*"],
+      "utils": ["src/utils"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
